@@ -5,8 +5,9 @@ kvirc (4:4.0.0~svn3763-2) UNRELEASED; urgency=low
   * debian/README.source:
     - Corrected some minor mistakes.
     - Expanded the file (mention get-orig-source).
+  * debian/patches/20_rm_python_stub.patch: Added DEP3-compliant header.
 
- -- Kai Wasserbäch <debian@carbon-project.org>  Fri, 08 Jan 2010 11:25:53 +0100
+ -- Kai Wasserbäch <debian@carbon-project.org>  Mon, 18 Jan 2010 17:22:04 +0100
 
 kvirc (4:4.0.0~svn3763-1) unstable; urgency=low
 
